added nothing to show message for casings

--- a/public/locale/de/common.json
+++ b/public/locale/de/common.json
@@ -232,90 +232,5 @@
   "newBorehole": "Neue Bohrung",
   "no": "Nein",
   "noComments": "Keine Kommentare",
-  "nothingToShow": "Nichts zu zeigen",
-  "np": "Keine Angabe",
-  "oneSelected": "Ein Bohrung ausgewählt",
-  "original_name": "Originalname",
-  "overlay": "Dargestellte Karten",
-  "password": "Passwort",
-  "preview": "Vorschau",
-  "previousVersions": "Frühere Versionen",
-  "project_name": "Projektname",
-  "public": "Öffentlich",
-  "public_name": "Öffentlicher Name",
-  "publication": "Veröffentlichung",
-  "publish": "Veröffentlichen",
-  "purpose": "Bohrzweck",
-  "qt_bore_inc_dir": "QC Inc. / Richtung",
-  "qt_elevation": "QC Ansatz Z",
-  "qt_length": "QC Tiefe",
-  "qt_location": "CQ Koordinaten",
-  "qt_top_bedrock": "QC Top Fels",
-  "refElevationCasing": "Referenz Ansatzhöhe",
-  "refresh": "Aktualisieren",
-  "reject": "Ablehnen",
-  "rejected": "Abgelehnt",
-  "remarks": "Bemerkungen",
-  "reset": "Zurücksetzen",
-  "resources": "Dokumentation",
-  "restriction": "Beschränkung",
-  "restriction_until": "Datum Beschränkung",
-  "result": "Ergebnis",
-  "results": "Ergebnisse",
-  "role": "Rolle",
-  "roles": "Rollen",
-  "save": "Speichern",
-  "saving": "Speichern",
-  "search": "Suchen",
-  "searchfilters": "Suchfilter",
-  "searchFiltersBoreholes": "Suchfilter von borehole",
-  "searchFiltersLayers": "Stratigraphie-Schicht filter",
-  "setmanually": "Manuell einstellen",
-  "show": "{{what}} anzeigen",
-  "showAll": "Alle anzeigen",
-  "showallfields": "Alle Felder anzeigen",
-  "showHistory": "Geschichte anzeigen",
-  "someSelected": "{{howMany}} Bohrungen ausgewählt",
-  "srs": "SRS",
-  "start": "Diese Seite ist auf Deutsch.",
-  "status": "status",
-  "statuscomplete": "fertiggestellt",
-  "statuscontrol": "wissenschaftlich geprüft",
-  "statusInstrument": "Status des Geräts",
-  "statusedit": "in Bearbeitung",
-  "statuspublic": "veröffentlicht",
-  "statusvalid": "validiert",
-  "stratigraphy": "Stratigrafie",
-  "stratigraphy_name": "Name / Version",
-  "stratigraphyfields": "Stratigraphiefelder",
-  "submit": "Weiterleiten",
-  "submitted": "Vorgelegt",
-  "sure": "Sind Sie sicher?",
-  "terms": "Nutzungsbedingungen",
-  "title": "BDMS",
-  "toMeters": "bis [m]",
-  "todepth": "bis Tiefe",
-  "todiameter": "bis Durchmesser",
-  "toelevation": "bis Hohe",
-  "top_bedrock": "Top Fels (m)",
-  "totaldepth": "Gesamttiefe (m)",
-  "type": "Typ",
-  "updateDate": "Bearbeitungsdatum",
-  "createDate": "Erstellungsdatum",
-  "importDate": "Importdatum",
-  "upload": "Hochladen",
-  "uploaded": "Hochgeladen",
-  "uploadFile": "Wählen Sie eine Datei (*.csv) aus",
-  "uploadNewFile": "Hochladen einer neuen Datei",
-  "user": "Benutzer",
-  "username": "Benutzername",
-  "usersMap": "Karten für Benutzer",
-  "viewas": "Ansicht als",
-  "visibility": "Visibilität",
-  "visible": "Sichtbar",
-  "workgroup": "Arbeitsgruppe",
-  "supplier": "Anbieter",
-  "yes": "Ja",
-  "you": "Du",
-  "yourcomments": "Ihre Kommentare"
+  "nothingToShow": "Nichts zu zeigen"
 }
