--- a/public/locale/fr/common.json
+++ b/public/locale/fr/common.json
@@ -232,90 +232,5 @@
   "newBorehole": "Nouveau forage",
   "no": "Non",
   "noComments": "Pas de commentaires",
-  "nothingToShow": "Rien à montrer",
-  "np": "Inconnu",
-  "oneSelected": "un perforation sélectionné",
-  "original_name": "Nom original",
-  "overlay": "Cartes affichées",
-  "password": "Mot de passe",
-  "preview": "preview",
-  "previousVersions": "Versions précédentes",
-  "project_name": "Nom du projet",
-  "public": "Public",
-  "public_name": "Nom public",
-  "publication": "Publication",
-  "publish": "publier",
-  "purpose": "Objet",
-  "qt_bore_inc_dir": "Qualité Inclin./Direction ",
-  "qt_elevation": "Qualité d'élévation",
-  "qt_length": "Qualité de profondeur",
-  "qt_location": "Qualité coordonnée",
-  "qt_top_bedrock": "Substrat supérieur QC",
-  "refElevationCasing": "Référence d'altitude",
-  "refresh": "Charge",
-  "reject": "Rejeter",
-  "rejected": "Rejeté",
-  "remarks": "Observations",
-  "reset": "Reset",
-  "resources": "Ressources",
-  "restriction": "Restreint",
-  "restriction_until": "Date de restriction",
-  "result": "Résultat",
-  "results": "Résultats",
-  "role": "Rôle",
-  "roles": "Rôles",
-  "save": "enregistrer",
-  "saving": "Enregistrement",
-  "search": "Recherche",
-  "searchfilters": "Filtres de recherche",
-  "searchFiltersBoreholes": "Filtres du forage",
-  "searchFiltersLayers": "Filtres de la couche stratigraphique",
-  "setmanually": "Régler manuellement",
-  "show": "Afficher {{what}}",
-  "showAll": "Afficher tous les instruments",
-  "showallfields": "afficher tous les champs",
-  "showHistory": "Montrer l'histoire",
-  "someSelected": "{{howMany}} perforations sélectionnés",
-  "srs": "SRS",
-  "start": "Cette page est en italien",
-  "status": "status",
-  "statuscomplete": "Terminé",
-  "statuscontrol": "Contrôle scientifique",
-  "statusInstrument": "Statut de l'instrument",
-  "statusedit": "Changement",
-  "statuspublic": "Publiquer",
-  "statusvalid": "Validation",
-  "stratigraphy": "Startigrafia",
-  "stratigraphy_name": "Nom / Version",
-  "stratigraphyfields": "Champs stratigraphiques",
-  "submit": "Appliquer",
-  "submitted": "Soumis",
-  "sure": "Êtes-vous sûr?",
-  "terms": "Conditions de service",
-  "title": "BMS",
-  "toMeters": "à [m]",
-  "todepth": "Jusqu'à la profondeur",
-  "todiameter": "Jusqu'au diamètre",
-  "toelevation": "Jusqu'à l'altitude",
-  "top_bedrock": "Substrat supérieur (m)",
-  "totaldepth": "Profondeur totale (m)",
-  "type": "Typologie",
-  "updateDate": "Date de mise à jour",
-  "createDate": "Date de création",
-  "importDate": "Date d'importation",
-  "upload": "Télécharger",
-  "uploaded": "Téléchargé",
-  "uploadFile": "Sélectionnez le fichier CSV à télécharger",
-  "uploadNewFile": "Télécharger un nouveau fichier",
-  "user": "Utilisateur",
-  "username": "Nom d'utilisateur",
-  "usersMap": "Cartes des utilisateurs",
-  "viewas": "Voir comme",
-  "visibility": "Visibilité",
-  "visible": "Visible",
-  "workgroup": "Groupe de travail",
-  "supplier": "Fournisseur",
-  "yes": "oui",
-  "you": "tu",
-  "yourcomments": "Vos commentaires"
+  "nothingToShow": "Rien à montrer"
 }
