--- a/public/locale/it/common.json
+++ b/public/locale/it/common.json
@@ -232,90 +232,5 @@
   "newBorehole": "Nuova perforazione",
   "no": "No",
   "noComments": "Nessun commento",
-  "nothingToShow": "Niente da mostrare",
-  "np": "Sconosciuto",
-  "oneSelected": "Una perforazione selezionata",
-  "original_name": "Nome originario",
-  "overlay": "Mappe visualizzate",
-  "password": "Password",
-  "preview": "anteprima",
-  "previousVersions": "Versioni precedenti",
-  "project_name": "Nome progetto",
-  "public": "Pubblico",
-  "public_name": "Nome pubblico",
-  "publication": "Pubblicazione",
-  "publish": "pubblica",
-  "purpose": "Scopo",
-  "qt_bore_inc_dir": "Qualità Inclin. / Direz.",
-  "qt_elevation": "Qualità elevazione",
-  "qt_length": "Qualità profondità",
-  "qt_location": "Qualità coordinate",
-  "qt_top_bedrock": "QC top substrato",
-  "refElevationCasing": "Referenza altitudine",
-  "refresh": "ricarica",
-  "reject": "Rifiuta",
-  "rejected": "Respinto",
-  "remarks": "Osservazioni",
-  "reset": "azzerare",
-  "resources": "Risorse",
-  "restriction": "Restrizione",
-  "restriction_until": "Data restrizione",
-  "result": "risultato",
-  "results": "risultati",
-  "role": "ruolo",
-  "roles": "ruoli",
-  "save": "salva",
-  "saving": "salvataggio",
-  "search": "cerca",
-  "searchfilters": "Filtri di ricerca",
-  "searchFiltersBoreholes": "Filtri specifici alla perforazione",
-  "searchFiltersLayers": "Filtri di ricerca dei livelli della stratigrafia",
-  "setmanually": "Impostare manualmente",
-  "show": "Mostra {{what}}",
-  "showAll": "Mostra tutti",
-  "showallfields": "Mostra tutti i campi",
-  "showHistory": "Mostra la storia",
-  "someSelected": "{{howMany}} perforazioni selezionate",
-  "srs": "SRS",
-  "start": "Questa pagina è in Italiano",
-  "status": "stato",
-  "statuscomplete": "Completato",
-  "statuscontrol": "Controllo scientifico",
-  "statusInstrument": "Stoto dello strumento",
-  "statusedit": "Modifica",
-  "statuspublic": "Pubblica",
-  "statusvalid": "Validazione",
-  "stratigraphy": "Stratigrafia",
-  "stratigraphy_name": "Nome / Versione",
-  "stratigraphyfields": "Campi della stratigrafia",
-  "submit": "Applica",
-  "submitted": "Inviato",
-  "sure": "Sei sicuro?",
-  "terms": "Termini di servizio",
-  "title": "BMS",
-  "toMeters": "a [m]",
-  "todepth": "alla profondità",
-  "todiameter": "a diametro",
-  "toelevation": "A elevazione",
-  "top_bedrock": "Top substrato (m)",
-  "totaldepth": "Profondità totale (m)",
-  "type": "Tipo",
-  "updateDate": "Data di aggiornamento",
-  "createDate": "Data di creazione",
-  "importDate": "Data di importazione",
-  "upload": "Carica",
-  "uploaded": "caricamento",
-  "uploadFile": "Seleziona il file CSV da caricare",
-  "uploadNewFile": "Caricare un nuovo file",
-  "user": "utente",
-  "username": "Nome utente",
-  "usersMap": "Mappe dell'utente",
-  "viewas": "Visualizza come",
-  "visibility": "Visibilità",
-  "visible": "Visibile",
-  "workgroup": "Gruppo di Lavoro",
-  "supplier": "Fornitore",
-  "yes": "Sì",
-  "you": "te",
-  "yourcomments": "Commenti"
+  "nothingToShow": "Niente da mostrare"
 }
