updated msg Casing empty

--- a/public/locale/de/common.json
+++ b/public/locale/de/common.json
@@ -209,28 +209,5 @@
   "map": "Karte",
   "materialCasingLayer": "Material",
   "materialFilling": "Material",
-  "meter": "Meter",
-  "msgCasingEmpty": "Kein Rohr verfügbar",
-  "msgDeleteUser": "Der ausgewählte Benutzer kann für immer gelöscht werden, da derzeit keine Aktivitäten in der Datenbank vorhanden sind.",
-  "msgDeleteWorkgroup": "Die ausgewählte Arbeitsgruppe kann für immer gelöscht werden, da derzeit keine Aktivitäten in der Datenbank vorhanden sind.",
-  "msgDeletingUserTip": "Der Benutzer wird aus der Datenbank gelöscht.",
-  "msgDeletingWorkgroupTip": "Die Arbeitsgruppe wird dauerhaft aus der Datenbank gelöscht",
-  "msgDisablingUser": "Der ausgewählte Benutzer kann nicht gelöscht werden, da sich derzeit einige Aktivitäten in der Datenbank befinden.",
-  "msgDisablingWorkgroup": "Die ausgewählte Arbeitsgruppe kann nicht gelöscht werden, da sich derzeit einige Aktivitäten in der Datenbank befinden.",
-  "msgDisclaimer_publish_title": "Haftungsausschluss veröffentlichen",
-  "msgEnablingUser": "Der Benutzer \"{{user}}\" wird wieder aktiviert. Dieser Benutzer kann sich dann wieder anmelden und Änderungen basierend auf seinen Rollen vornehmen.",
-  "msgEnablingWorkgroup": "Die Arbeitsgruppe \"{{workgroup}}\" wird wieder aktiviert. Benutzer, die zu dieser Arbeitsgruppe gehören, können Änderungen basierend auf ihren Rollen vornehmen.",
-  "msgFillingEmpty": "Kein Rohr verfügbar",
-  "msgIdentifierAlreadyUsed": "Identifikator bereits vergeben.",
-  "msgIdentifierDeletionAlreadyUsed": "Identifikator kann nicht im Gebrauch gelöscht werden",
-  "msgInstrumentsEmpty": "Instrumente sind mit Rohren verbunden: keine Rohre verfügbar",
-  "msgReenablingTip": "Sie können ihn später wieder aktivieren.",
-  "msgStartigraphyEmpty": "Keine Stratigraphie verfügbar",
-  "municipality": "Gemeinde",
-  "name": "Name",
-  "new": "Neue {{what}}",
-  "newBorehole": "Neue Bohrung",
-  "no": "Nein",
-  "noComments": "Keine Kommentare",
-  "nothingToShow": "Nichts zu zeigen"
+  "meter": "Meter"
 }
