--- a/public/locale/en/common.json
+++ b/public/locale/en/common.json
@@ -209,28 +209,5 @@
   "map": "Map",
   "materialCasingLayer": "Material",
   "materialFilling": "Material",
-  "meter": "meter",
-  "msgCasingEmpty": "No casing available",
-  "msgDeleteUser": "The selected user can be deleted forever because currently there is not any trace of activity in the database.",
-  "msgDeleteWorkgroup": "The selected workgroup can be deleted forever because currently there are not any traces of activities in the database.",
-  "msgDeletingUserTip": "the user will be deleted from the database, but later you will be able to recreate the same user again.",
-  "msgDeletingWorkgroupTip": "The workgroup will be permanently deleted from the database",
-  "msgDisablingUser": "The selected user can not be deleted because currently there are some traces of activities in the database.",
-  "msgDisablingWorkgroup": "The selected workgroup can not be deleted because currently there are some traces of activities in the database.",
-  "msgDisclaimer_publish_title": "Publish disclaimer",
-  "msgEnablingUser": "You are going to re-enable the user \"{{user}}\". This user will be able to login and apply modifications based on its roles. ",
-  "msgEnablingWorkgroup": "You are going to reenable the \"{{workgroup}}\" workgroup. Users belonging to this workgroup will be able to apply again modifications based on theirs roles.",
-  "msgFillingEmpty": "No filling available",
-  "msgIdentifierAlreadyUsed": "Identifier already used",
-  "msgIdentifierDeletionAlreadyUsed": "Connot delete in use identifier",
-  "msgInstrumentsEmpty": "Instruments are associated with casings: no casings available",
-  "msgReenablingTip": "you will be able to re-enable it later.",
-  "msgStartigraphyEmpty": "No stratigraphy available",
-  "municipality": "Municipality",
-  "name": "Name",
-  "new": "New {{what}}",
-  "newBorehole": "New borehole",
-  "no": "No",
-  "noComments": "No comments",
-  "nothingToShow": "Nothing to show"
+  "meter": "meter"
 }
