--- a/public/locale/fr/common.json
+++ b/public/locale/fr/common.json
@@ -209,28 +209,5 @@
   "map": "Carte",
   "materialCasingLayer": "Matériau",
   "materialFilling": "Matériau",
-  "meter": "Mètres",
-  "msgCasingEmpty": "Aucun tubage disponible",
-  "msgDeleteUser": "L'utilisateur sélectionné peut être supprimé par toujours parce qu'il n'y a aucune trace pour le moment d'activité dans la base de données.",
-  "msgDeleteWorkgroup": "Depuis, il n'y a aucune trace d'activité dans la base de données, le groupe de travail sélectionné peutêtre éliminé pour toujours.",
-  "msgDeletingUserTip": "l'utilisateur sera supprimé de la base de données, mais dans Le même utilisateur peut être recréé à nouveau.",
-  "msgDeletingWorkgroupTip": "le groupe de travail sera définitivement supprimé de la base de données",
-  "msgDisablingUser": "L'utilisateur sélectionné ne peut pas être supprimé parce que pour le moment il y a des traces d'activité dans la base de données.",
-  "msgDisablingWorkgroup": "Le groupe de travail sélectionné ne peut pas être supprimé parce qu'il y a pour le moment certaines de ses traces d'activité dans la base de données.",
-  "msgDisclaimer_publish_title": "Publier les conditions de service",
-  "msgEnablingUser": "Vous êtes sur le point de réactiver \"{{user}}\". Cet utilisateur pourra se connecter et appliquez les modifications en fonction de vos rôles.",
-  "msgEnablingWorkgroup": "Vous réactiverez le groupe de travail \"{{workgroup}}\".Utilisateurs appartenant à ce groupe de travailpeut appliquer les modifications en fonction de leurs rôles.",
-  "msgFillingEmpty": "Aucun remplissage disponible",
-  "msgIdentifierAlreadyUsed": "Identifiant déjà utilisé",
-  "msgIdentifierDeletionAlreadyUsed": "Ne peut pas supprimer l'identifiant en cours d'utilisation",
-  "msgInstrumentsEmpty": "Les instruments sont associés à des tubages : aucun tubage disponible",
-  "msgReenablingTip": "tu pourras le réactiver plus tard",
-  "msgStartigraphyEmpty": "Aucune stratigraphie disponible",
-  "municipality": "Municipalité",
-  "name": "Nome",
-  "new": "Neuf {{what}}",
-  "newBorehole": "Nouveau forage",
-  "no": "Non",
-  "noComments": "Pas de commentaires",
-  "nothingToShow": "Rien à montrer"
+  "meter": "Mètres"
 }
