--- a/public/locale/it/common.json
+++ b/public/locale/it/common.json
@@ -209,28 +209,5 @@
   "map": "Mappa",
   "materialCasingLayer": "Materiale",
   "materialFilling": "Materiale",
-  "meter": "metri",
-  "msgCasingEmpty": "Nessuna tubazione disponibile",
-  "msgDeleteUser": "L'utente selezionato può essere eliminato per sempre perché al momento non esiste alcuna traccia di attività nel database.",
-  "msgDeleteWorkgroup": "Visto che al momento non ci sono tracce di attività nel database, il gruppo di lavoro selezionato, può essere eliminato per sempre.",
-  "msgDeletingUserTip": "l'utente verrà eliminato dal database, ma in seguito sarà possibile ricreare nuovamente lo stesso utente.",
-  "msgDeletingWorkgroupTip": "il gruppo di lavoro verrà eliminato definitivamente dal database",
-  "msgDisablingUser": "L'utente selezionato non può essere eliminato perché al momento ci sono sue tracce di attività nel database.",
-  "msgDisablingWorkgroup": "Il gruppo di lavoro selezionato non può essere eliminato perché al momento ci sono alcune sue tracce di attività nel database.",
-  "msgDisclaimer_publish_title": "Pubblica i termini",
-  "msgEnablingUser": "Stai per riattivare l'utente \"{{user}}\". Questo utente sarà in grado di accedere e applicare le modifiche in base ai suoi ruoli.",
-  "msgEnablingWorkgroup": "Riattiverai il gruppo di lavoro \"{{workgroup}}\". Gli utenti appartenenti a questo gruppo di lavoro potranno applicare le modifiche in base ai loro ruoli.",
-  "msgFillingEmpty": "Nessun riempimento disponibile",
-  "msgIdentifierAlreadyUsed": "identificatore già in uso",
-  "msgIdentifierDeletionAlreadyUsed": "Non puoi cancellare l'identificatore in uso",
-  "msgInstrumentsEmpty": "Gli strumenti sono associati alle tubazioni: nessuna tubazione disponibile",
-  "msgReenablingTip": "sarai in grado di riattivarlo in seguito",
-  "msgStartigraphyEmpty": "Nessuna stratigrafia disponibile",
-  "municipality": "Comune",
-  "name": "Nome",
-  "new": "Nuovo {{what}}",
-  "newBorehole": "Nuova perforazione",
-  "no": "No",
-  "noComments": "Nessun commento",
-  "nothingToShow": "Niente da mostrare"
+  "meter": "metri"
 }
