--- a/public/locale/de/common.json
+++ b/public/locale/de/common.json
@@ -209,5 +209,113 @@
   "map": "Karte",
   "materialCasingLayer": "Material",
   "materialFilling": "Material",
-  "meter": "Meter"
+  "meter": "Meter",
+  "msgCasingEmpty": "Für ein Verrohrungsprofil bitte das Plus-Symbol oben rechts klicken",
+  "msgDeleteUser": "Der ausgewählte Benutzer kann für immer gelöscht werden, da derzeit keine Aktivitäten in der Datenbank vorhanden sind.",
+  "msgDeleteWorkgroup": "Die ausgewählte Arbeitsgruppe kann für immer gelöscht werden, da derzeit keine Aktivitäten in der Datenbank vorhanden sind.",
+  "msgDeletingUserTip": "Der Benutzer wird aus der Datenbank gelöscht",
+  "msgDeletingWorkgroupTip": "Die Arbeitsgruppe wird dauerhaft aus der Datenbank gelöscht",
+  "msgDisablingUser": "Der ausgewählte Benutzer kann nicht gelöscht werden, da sich derzeit einige Aktivitäten in der Datenbank befinden.",
+  "msgDisablingWorkgroup": "Die ausgewählte Arbeitsgruppe kann nicht gelöscht werden, da sich derzeit einige Aktivitäten in der Datenbank befinden.",
+  "msgDisclaimer_publish_title": "Haftungsausschluss veröffentlichen",
+  "msgEnablingUser": "Der Benutzer \"{{user}}\" wird wieder aktiviert. Dieser Benutzer kann sich dann wieder anmelden und Änderungen basierend auf seinen Rollen vornehmen.",
+  "msgEnablingWorkgroup": "Die Arbeitsgruppe \"{{workgroup}}\" wird wieder aktiviert. Benutzer, die zu dieser Arbeitsgruppe gehören, können Änderungen basierend auf ihren Rollen vornehmen.",
+  "msgFillingEmpty": "Kein Rohr verfügbar",
+  "msgIdentifierAlreadyUsed": "Identifikator bereits vergeben.",
+  "msgIdentifierDeletionAlreadyUsed": "Identifikator kann nicht im Gebrauch gelöscht werden",
+  "msgInstrumentsEmpty": "Instrumente sind mit Rohren verbunden: keine Rohre verfügbar",
+  "msgReenablingTip": "Sie können ihn später wieder aktivieren.",
+  "msgStartigraphyEmpty": "Keine Stratigraphie verfügbar",
+  "municipality": "Gemeinde",
+  "name": "Name",
+  "new": "Neue {{what}}",
+  "newBorehole": "Neue Bohrung",
+  "no": "Nein",
+  "noComments": "Keine Kommentare",
+  "nothingToShow": "Nichts zu zeigen",
+  "np": "Keine Angabe",
+  "oneSelected": "Ein Bohrung ausgewählt",
+  "original_name": "Originalname",
+  "overlay": "Dargestellte Karten",
+  "password": "Passwort",
+  "preview": "Vorschau",
+  "previousVersions": "Frühere Versionen",
+  "project_name": "Projektname",
+  "public": "Öffentlich",
+  "public_name": "Öffentlicher Name",
+  "publication": "Veröffentlichung",
+  "publish": "Veröffentlichen",
+  "purpose": "Bohrzweck",
+  "qt_bore_inc_dir": "QC Inc. / Richtung",
+  "qt_elevation": "QC Ansatz Z",
+  "qt_length": "QC Tiefe",
+  "qt_location": "CQ Koordinaten",
+  "qt_top_bedrock": "QC Top Fels",
+  "refElevationCasing": "Referenz Ansatzhöhe",
+  "refresh": "Aktualisieren",
+  "reject": "Ablehnen",
+  "rejected": "Abgelehnt",
+  "remarks": "Bemerkungen",
+  "reset": "Zurücksetzen",
+  "resources": "Dokumentation",
+  "restriction": "Beschränkung",
+  "restriction_until": "Datum Beschränkung",
+  "result": "Ergebnis",
+  "results": "Ergebnisse",
+  "role": "Rolle",
+  "roles": "Rollen",
+  "save": "Speichern",
+  "saving": "Speichern",
+  "search": "Suchen",
+  "searchfilters": "Suchfilter",
+  "searchFiltersBoreholes": "Suchfilter von borehole",
+  "searchFiltersLayers": "Stratigraphie-Schicht filter",
+  "setmanually": "Manuell einstellen",
+  "show": "{{what}} anzeigen",
+  "showAll": "Alle anzeigen",
+  "showallfields": "Alle Felder anzeigen",
+  "showHistory": "Geschichte anzeigen",
+  "someSelected": "{{howMany}} Bohrungen ausgewählt",
+  "srs": "SRS",
+  "start": "Diese Seite ist auf Deutsch.",
+  "status": "status",
+  "statuscomplete": "fertiggestellt",
+  "statuscontrol": "wissenschaftlich geprüft",
+  "statusInstrument": "Status des Geräts",
+  "statusedit": "in Bearbeitung",
+  "statuspublic": "veröffentlicht",
+  "statusvalid": "validiert",
+  "stratigraphy": "Stratigrafie",
+  "stratigraphy_name": "Name / Version",
+  "stratigraphyfields": "Stratigraphiefelder",
+  "submit": "Weiterleiten",
+  "submitted": "Vorgelegt",
+  "sure": "Sind Sie sicher?",
+  "terms": "Nutzungsbedingungen",
+  "title": "BDMS",
+  "toMeters": "bis [m]",
+  "todepth": "bis Tiefe",
+  "todiameter": "bis Durchmesser",
+  "toelevation": "bis Hohe",
+  "top_bedrock": "Top Fels (m)",
+  "totaldepth": "Gesamttiefe (m)",
+  "type": "Typ",
+  "updateDate": "Bearbeitungsdatum",
+  "createDate": "Erstellungsdatum",
+  "importDate": "Importdatum",
+  "upload": "Hochladen",
+  "uploaded": "Hochgeladen",
+  "uploadFile": "Wählen Sie eine Datei (*.csv) aus",
+  "uploadNewFile": "Hochladen einer neuen Datei",
+  "user": "Benutzer",
+  "username": "Benutzername",
+  "usersMap": "Karten für Benutzer",
+  "viewas": "Ansicht als",
+  "visibility": "Visibilität",
+  "visible": "Sichtbar",
+  "workgroup": "Arbeitsgruppe",
+  "supplier": "Anbieter",
+  "yes": "Ja",
+  "you": "Du",
+  "yourcomments": "Ihre Kommentare"
 }
